# envsens

./: .gitignore  pyproject.toml
envsens/: bme280.py  console.py  worker.py
tests/: test_envsens.py
